--- a/config/_default/module.yaml
+++ b/config/_default/module.yaml
@@ -8,3 +8,6 @@ imports:
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-netlify
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-reveal
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-bootstrap/v5
+
+
+proxy: https://goproxy.cn
