--- a/.github/workflows/import-publications.yml
+++ b/.github/workflows/import-publications.yml
@@ -10,7 +10,7 @@ permissions:
 on:
   push:
     branches: ['main']
-    paths: ['publications.bib']
+    paths: ['assets/publications.bib']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
